--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hooks_riverpod: ^2.5.1
   flutter_hooks: ^0.20.5
   riverpod_annotation: ^2.3.5
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
