--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_hooks: ^0.20.5
   riverpod_annotation: ^2.3.5
   flutter_riverpod: ^2.5.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
