--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   riverpod_annotation: ^2.3.5
   flutter_riverpod: ^2.5.1
   image_picker: ^1.1.2
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
